Fixes #1: se centraliza el uso de archivo de propiedades. El archivo fuente sera el application.properties

--- a/com.consultec.esigns.listener/.gitignore
+++ b/com.consultec.esigns.listener/.gitignore
@@ -2,8 +2,10 @@
 .gradle
 .project
 .settings
+logs
 target
 */target
+*/logs
 */build
 activemq-data
 */activemq-data
@@ -20,3 +22,4 @@ gradle
 **/.sass-cache
 **/.settings
 **/bin
+**/logs
