--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 # log4j
-logging.level.org.springframework.web=DEBUG
+logging.level.root=info
+spring.profiles.active=dev
+logging.console=off
+logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
+logging.path=logs
+logging.file=${logging.path}/log.log
+logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
+logging.level.com.consultec.esigns.listener=ERROR
+
+# spring configuration 
+spring.main.banner-mode=off
 
 #hornetq queue
 spring.hornetq.mode=native
@@ -42,4 +52,4 @@ user.default.icepdfdllpath=/Consultec/distributions/client/WacomGSS
 
 # keystore access mode
 # allowed values: msks, pkcs12, Windows-MY, Windows-ROOT 
-keystore.access.type=Windows-MY
+keystore.access.type=msks
