--- a/com.consultec.esigns.core/pom.xml
+++ b/com.consultec.esigns.core/pom.xml
@@ -73,5 +73,10 @@
 			<artifactId>jna-platform</artifactId>
 			<version>4.5.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.pheox.jcapi</groupId>
+			<artifactId>jcapi</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 	</dependencies>
 </project>
