--- a/com.consultec.esigns.listener/pom.xml
+++ b/com.consultec.esigns.listener/pom.xml
@@ -97,6 +97,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>com.consultec.esigns</groupId>
 			<artifactId>com.consultec.esigns.core</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -119,7 +124,12 @@
 		<dependency>
 			<groupId>com.pheox.jcapi</groupId>
 			<artifactId>jcapi</artifactId>
-			<version>2.2.3</version>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.6</version>
 		</dependency>
 	</dependencies>
 </project>
