--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 # log4j
-logging.level.org.springframework.web=DEBUG
+logging.level.root=info
+spring.profiles.active=dev
+logging.console=off
+logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
+logging.path=logs
+logging.file=${logging.path}/log.log
+logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
+logging.level.com.consultec.esigns.listener=ERROR
+
+# spring configuration 
+spring.main.banner-mode=off
 
 #hornetq queue
 spring.hornetq.mode=native
@@ -15,7 +25,7 @@ apache.activeq.port=61616
 apache.activeq.servername=MQ_SERVER
 
 #Signature user experience 
-operator.default.certificate=/opt/workspace/SignPDFs/src/main/resources/testkey.p12
+operator.default.certificate=
 operator.password.certificate=123456
 user.default.pdfdocumentname=data.pdf
 user.default.pdfstrokedocname=stroked.pdf
@@ -23,23 +33,24 @@ user.default.strokefilebasename=sig
 user.default.strokeimgextension=.png
 user.default.stroketxtextension=.txt
 user.default.pdfesigneddocname=signed.pdf
-user.default.basehome=/opt/workspace
+user.default.basehome=/Consultec/workspace
 
 #strokes properties
 stroke.dateformatter.timestamp=yyyy.MM.dd.HH.mm.ss
 stroke.reason.value=Banco General por medio de su ejecutivo de negocio {0} certifica que los firmantes de este documento han sido identificados positivamente y es/son la(s) persona(s) idónea(s) para firmar el mismo
 stroke.location.value=Ciudad de Panamá, Panamá
 forceload.stroke.provider.implementation=true
-stroke.delete.data.onexit=false
+stroke.provider.wacom.license=AgAkAMlv5nGdAQVXYWNvbQ1TaWduYXR1cmUgU0RLAgOBAgJkAACIAwEDZQA
+stroke.delete.data.onexit=true
 # TSA Server URL
 #tsa.server.url=http://time.certum.pl/
 #tsa.server.url=http://213.37.154.21:12080/CryptosecOpenKey/tsa_service
 tsa.server.url=http://as-demo.bit4id.org/smartengine/tsa
 
 # IcePDF path 
-user.default.icepdfjarpath=/Consultec/distributions/client
-user.default.icepdfdllpath=/Consultec/distributions/client/WacomGSS
+user.default.icepdfjarpath=C:\\Consultec\\distributions\\client
+user.default.icepdfdllpath=C:\\Consultec\\distributions\\client\\WacomGSS
 
 # keystore access mode
 # allowed values: msks, pkcs12, Windows-MY, Windows-ROOT 
-keystore.access.type=Windows-MY
+keystore.access.type=msks
