--- a/com.consultec.esigns.listener/pom.xml
+++ b/com.consultec.esigns.listener/pom.xml
@@ -20,6 +20,12 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources/</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -80,6 +86,22 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<version>2.0.2.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>com.consultec.esigns</groupId>
 			<artifactId>com.consultec.esigns.core</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -102,7 +124,12 @@
 		<dependency>
 			<groupId>com.pheox.jcapi</groupId>
 			<artifactId>jcapi</artifactId>
-			<version>2.2.3</version>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.6</version>
 		</dependency>
 	</dependencies>
 </project>
