se realizó refactoring para la clase SecurityHelper para transformarlo en un SecurityManager (singleton) que se inicia una unica vez para mantener en memoria los settings de seguridad al momento de iniciar la aplicacion, optimizando los recursos de la maquina.

--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+server.error.whitelabel.enabled=false 
+# Whether to enable the default error page displayed in browsers in case of a server error.
+spring.servlet.multipart.max-file-size=10000KB
+spring.servlet.multipart.max-request-size=10000KB
+
 # log4j
 logging.level.root=info
 spring.profiles.active=dev
@@ -25,7 +30,7 @@ apache.activeq.port=61616
 apache.activeq.servername=MQ_SERVER
 
 #Signature user experience 
-operator.default.certificate=
+operator.default.certificate=/Consultec/workspace/testkey.p12
 operator.password.certificate=123456
 user.default.pdfdocumentname=data.pdf
 user.default.pdfstrokedocname=stroked.pdf
@@ -37,11 +42,11 @@ user.default.basehome=/Consultec/workspace
 
 #strokes properties
 stroke.dateformatter.timestamp=yyyy.MM.dd.HH.mm.ss
-stroke.reason.value=Banco General por medio de su ejecutivo de negocio {0} certifica que los firmantes de este documento han sido identificados positivamente y es/son la(s) persona(s) idónea(s) para firmar el mismo
-stroke.location.value=Ciudad de Panamá, Panamá
+stroke.reason.value=Banco General por medio de su ejecutivo de negocio {0} certifica que los firmantes de este documento han sido identificados positivamente y es/son la(s) persona(s) id\u00F3nea(s) para firmar el mismo
+stroke.location.value=Ciudad de Panam\u00E1, Panam\u00E1
 forceload.stroke.provider.implementation=true
 stroke.provider.wacom.license=AgAkAMlv5nGdAQVXYWNvbQ1TaWduYXR1cmUgU0RLAgOBAgJkAACIAwEDZQA
-stroke.delete.data.onexit=true
+stroke.delete.data.onexit=false
 # TSA Server URL
 #tsa.server.url=http://time.certum.pl/
 #tsa.server.url=http://213.37.154.21:12080/CryptosecOpenKey/tsa_service
@@ -53,4 +58,4 @@ user.default.icepdfdllpath=C:\\Consultec\\distributions\\client\\WacomGSS
 
 # keystore access mode
 # allowed values: msks, pkcs12, Windows-MY, Windows-ROOT 
-keystore.access.type=msks
+keystore.access.type=pkcs12
