se unifica el manejo de archivos en una unica clase controller con dos metodos. * se agrega una implementacion inicial del YAML para definir el API del listener. * Se agrega clase utilitaria para el manejo de parametros en el header

--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -58,4 +58,4 @@ user.default.icepdfdllpath=C:\\Consultec\\distributions\\client\\WacomGSS
 
 # keystore access mode
 # allowed values: msks, pkcs12, Windows-MY, Windows-ROOT 
-keystore.access.type=pkcs12
+keystore.access.type=msks
