se realiza integración con Stella para recibir archivos pdf desde el cliente y enviarlos a procesar en el mismo flujo que el documento recibido via pad

--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -46,7 +46,7 @@ stroke.reason.value=Banco General por medio de su ejecutivo de negocio {0} certi
 stroke.location.value=Ciudad de Panam\u00E1, Panam\u00E1
 forceload.stroke.provider.implementation=true
 stroke.provider.wacom.license=AgAkAMlv5nGdAQVXYWNvbQ1TaWduYXR1cmUgU0RLAgOBAgJkAACIAwEDZQA
-stroke.delete.data.onexit=false
+stroke.delete.data.onexit=true
 # TSA Server URL
 #tsa.server.url=http://time.certum.pl/
 #tsa.server.url=http://213.37.154.21:12080/CryptosecOpenKey/tsa_service
