--- a/com.consultec.esigns.core/pom.xml
+++ b/com.consultec.esigns.core/pom.xml
@@ -59,9 +59,9 @@
 			<version>1.54</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.bouncycastle</groupId>
-		    <artifactId>bcpkix-jdk15on</artifactId>
-		    <version>1.54</version>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.54</version>
 		</dependency>
 		<dependency>
 			<groupId>com.itextpdf</groupId>
@@ -77,6 +77,16 @@
 			<groupId>com.pheox.jcapi</groupId>
 			<artifactId>jcapi</artifactId>
 			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.9</version>
 		</dependency>
 	</dependencies>
 </project>
