se agregan cambios en POM's para copiar librerias dependientes al momento de compilarlas y mantener actualizadas las referencias en los proyectos clientes

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
  <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <consultec.workspace.path>/opt/workspace/</consultec.workspace.path>
+    <icepdf.target.folder>${consultec.workspace.path}/icepdf/</icepdf.target.folder>
   </properties>
  
   <modules>
