--- a/com.consultec.esigns.core/pom.xml
+++ b/com.consultec.esigns.core/pom.xml
@@ -89,4 +89,48 @@
 			<version>2.9.9</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>package</phase>
+						<configuration>
+							<target>
+								<echo>ANT TASK - copying files....</echo>
+								<copy todir="${icepdf.target.folder}/libs" overwrite="true"
+									flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+
+								<copy todir="${icepdf.target.folder}/core/core-awt/libs"
+									overwrite="true" flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+
+								<copy
+									todir="${icepdf.target.folder}/viewer/viewer-awt/libs"
+									overwrite="true" flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
