--- a/com.consultec.esigns.strokes/com.consultec.esigns.strokes.api/pom.xml
+++ b/com.consultec.esigns.strokes/com.consultec.esigns.strokes.api/pom.xml
@@ -16,6 +16,53 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
-    		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+
+	<build>
+		
+		<plugins>
+		
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>package</phase>
+						<configuration>
+							<target>
+								<echo>ANT TASK - copying files....</echo>
+								<copy todir="${icepdf.target.folder}/libs" overwrite="true"
+									flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+
+								<copy todir="${icepdf.target.folder}/core/core-awt/libs"
+									overwrite="true" flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+
+								<copy
+									todir="${icepdf.target.folder}/viewer/viewer-awt/libs"
+									overwrite="true" flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
