--- a/com.consultec.esigns.strokes/com.consultec.esigns.strokes.impl.wacom/pom.xml
+++ b/com.consultec.esigns.strokes/com.consultec.esigns.strokes.impl.wacom/pom.xml
@@ -24,8 +24,6 @@
 	<build>
 		<plugins>
 
-
-			<!-- download source code in Eclipse, best practice -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
@@ -36,7 +34,6 @@
 				</configuration>
 			</plugin>
 
-			<!-- Set a JDK compiler level -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -47,7 +44,6 @@
 				</configuration>
 			</plugin>
 
-			<!-- Make this jar executable -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -55,7 +51,6 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-
 							<!-- Jar file entry point -->
 							<mainClass>com.consultec.esigns.strokes.impl.WacomSignatureCaptureDiagnostic</mainClass>
 
@@ -84,7 +79,49 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>package</phase>
+						<configuration>
+							<target>
+								<echo>ANT TASK - copying files....</echo>
+								<copy todir="${icepdf.target.folder}/libs" overwrite="true"
+									flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+
+								<copy todir="${icepdf.target.folder}/core/core-awt/libs"
+									overwrite="true" flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+
+								<copy
+									todir="${icepdf.target.folder}/viewer/viewer-awt/libs"
+									overwrite="true" flatten="true">
+									<fileset dir="${basedir}">
+										<include name="target/*.jar" />
+									</fileset>
+								</copy>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
+
 	</build>
 
 	<dependencies>
