--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-server.error.whitelabel.enabled=false 
+server.port=8084
+server.error.whitelabel.enabled=false
+
 # Whether to enable the default error page displayed in browsers in case of a server error.
 spring.servlet.multipart.max-file-size=10000KB
 spring.servlet.multipart.max-request-size=10000KB
@@ -7,22 +9,15 @@ spring.servlet.multipart.max-request-size=10000KB
 logging.level.root=info
 spring.profiles.active=dev
 logging.console=off
-logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
+logging.pattern.console=[%d{yyyy-MM-dd HH:mm:ss.SSS}] [%p] [%c{1}] - %m%n
 logging.path=logs
-logging.file=${logging.path}/log.log
-logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
-logging.level.com.consultec.esigns.listener=ERROR
+logging.file=${logging.path}/app.log
+logging.pattern.file=[%d{yyyy-MM-dd HH:mm:ss.SSS}] [%p] [%c{1}] - %m%n
+logging.level.com.consultec.esigns.listener=INFO
 
 # spring configuration 
-spring.main.banner-mode=off
-
-#hornetq queue
-spring.hornetq.mode=native
-spring.hornetq.host=127.0.0.1
-spring.hornetq.port=9876
-
-# queue server
-queue.server.name=MQ_SERVER
+spring.application.name=E-Signs Listener
+spring.application.version=@project.version@
 
 #activemq server
 apache.activeq.host=tcp://127.0.0.1
@@ -42,20 +37,23 @@ user.default.basehome=/Consultec/workspace
 
 #strokes properties
 stroke.dateformatter.timestamp=yyyy.MM.dd.HH.mm.ss
-stroke.reason.value=Banco General por medio de su ejecutivo de negocio {0} certifica que los firmantes de este documento han sido identificados positivamente y es/son la(s) persona(s) id\u00F3nea(s) para firmar el mismo
-stroke.location.value=Ciudad de Panam\u00E1, Panam\u00E1
+stroke.reason.value=Banco General por medio de su ejecutivo de negocio {0} certifica que los firmantes de este documento han sido identificados positivamente y es/son la(s) persona(s) idónea(s) para firmar el mismo
+stroke.location.value=Ciudad de Panamá, Panamá
 forceload.stroke.provider.implementation=true
 stroke.provider.wacom.license=AgAkAMlv5nGdAQVXYWNvbQ1TaWduYXR1cmUgU0RLAgOBAgJkAACIAwEDZQA
 stroke.delete.data.onexit=true
+
 # TSA Server URL
 #tsa.server.url=http://time.certum.pl/
 #tsa.server.url=http://213.37.154.21:12080/CryptosecOpenKey/tsa_service
 tsa.server.url=http://as-demo.bit4id.org/smartengine/tsa
 
 # IcePDF path 
-user.default.icepdfjarpath=C:\\Consultec\\distributions\\client
-user.default.icepdfdllpath=C:\\Consultec\\distributions\\client\\WacomGSS
+#user.default.icepdfjarpath=C:\\Consultec\\distributions\\client
+#user.default.icepdfdllpath=C:\\Consultec\\distributions\\client\\WacomGSS
+user.default.icepdfjarpath=C:\\Norte\\sign\\dist\\icepdf-os-6.3.1-SNAPSHOT\\libs
+user.default.icepdfdllpath=C:\\Norte\\sign\\dist\\WacomGSS
 
 # keystore access mode
-# allowed values: msks, pkcs12, Windows-MY, Windows-ROOT 
-keystore.access.type=msks
+# allowed values: msks, pkcs12, Windows-MY, Windows-ROOT, none 
+keystore.access.type=none
