Base para implementación de healtcheck

--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=8084
 server.error.whitelabel.enabled=false
+server.error.include-stacktrace=always
 
 # Whether to enable the default error page displayed in browsers in case of a server error.
 spring.servlet.multipart.max-file-size=10000KB
 spring.servlet.multipart.max-request-size=10000KB
+
+management.endpoint.health.show-details=ALWAYS
 
 # log4j
 logging.level.root=info
