--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -28,7 +28,7 @@ apache.activeq.port=61616
 apache.activeq.servername=MQ_SERVER
 
 #Signature user experience 
-operator.default.certificate=/Consultec/workspace/testkey.p12
+operator.default.certificate=/Signature/cert/testkey.p12
 operator.password.certificate=123456
 user.default.pdfdocumentname=data.pdf
 user.default.pdfstrokedocname=stroked.pdf
@@ -36,7 +36,7 @@ user.default.strokefilebasename=sig
 user.default.strokeimgextension=.png
 user.default.stroketxtextension=.txt
 user.default.pdfesigneddocname=signed.pdf
-user.default.basehome=/Consultec/workspace
+user.default.basehome=/Signature/docs
 
 #strokes properties
 stroke.dateformatter.timestamp=yyyy.MM.dd.HH.mm.ss
@@ -53,9 +53,9 @@ tsa.server.url=http://as-demo.bit4id.org/smartengine/tsa
 
 # IcePDF path 
 #user.default.icepdfjarpath=C:\\Consultec\\distributions\\client
-user.default.icepdfjarpath=C:\\Norte\\sign\\dist\\icepdf-os-6.3.1-SNAPSHOT\\libs
 #user.default.icepdfdllpath=C:\\Consultec\\distributions\\client\\WacomGSS
-user.default.icepdfdllpath=C:\\Norte\\sign\\dist\\WacomGSS
+user.default.icepdfjarpath=/Signature/dist/icepdf-os-6.3.1-SNAPSHOT/libs
+user.default.icepdfdllpath=/Signature/dist/WacomGSS
 
 # keystore access mode
 # allowed values: msks, pkcs12, Windows-MY, Windows-ROOT, none 
