--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8084
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
 
+spring.profiles.active=dev
+
 # Whether to enable the default error page displayed in browsers in case of a server error.
 spring.servlet.multipart.max-file-size=10000KB
 spring.servlet.multipart.max-request-size=10000KB
@@ -10,7 +12,6 @@ management.endpoint.health.show-details=ALWAYS
 
 # log4j
 logging.level.root=info
-spring.profiles.active=dev
 logging.console=off
 logging.pattern.console=[%d{yyyy-MM-dd HH:mm:ss.SSS}] [%p] [%c{1}] - %m%n
 logging.path=logs
@@ -36,7 +37,8 @@ user.default.strokefilebasename=sig
 user.default.strokeimgextension=.png
 user.default.stroketxtextension=.txt
 user.default.pdfesigneddocname=signed.pdf
-user.default.basehome=/Signature/docs
+#user.default.basehome=/Signature/docs
+user.default.basehome=/BG/BgpNorteSignature/dist/docs
 
 #strokes properties
 stroke.dateformatter.timestamp=yyyy.MM.dd.HH.mm.ss
@@ -54,8 +56,10 @@ tsa.server.url=http://as-demo.bit4id.org/smartengine/tsa
 # IcePDF path 
 #user.default.icepdfjarpath=C:\\Consultec\\distributions\\client
 #user.default.icepdfdllpath=C:\\Consultec\\distributions\\client\\WacomGSS
-user.default.icepdfjarpath=/Signature/dist/icepdf-os-6.3.1-SNAPSHOT/libs
-user.default.icepdfdllpath=/Signature/dist/WacomGSS
+#user.default.icepdfjarpath=/Signature/dist/icepdf-os-6.3.1-SNAPSHOT/libs
+#user.default.icepdfdllpath=/Signature/dist/WacomGSS
+user.default.icepdfjarpath=/BG/BgpNorteSignature/dist/client
+user.default.icepdfdllpath=/Program Files/Common Files/WacomGSS
 
 # keystore access mode
 # allowed values: msks, pkcs12, Windows-MY, Windows-ROOT, none 
