--- a/com.consultec.esigns.listener/src/main/resources/application.properties
+++ b/com.consultec.esigns.listener/src/main/resources/application.properties
@@ -42,8 +42,8 @@ user.default.basehome=/BG/BgpNorteSignature/dist/docs
 
 #strokes properties
 stroke.dateformatter.timestamp=yyyy.MM.dd.HH.mm.ss
-stroke.reason.value=Banco General por medio de su ejecutivo de negocio {0} certifica que los firmantes de este documento han sido identificados positivamente y es/son la(s) persona(s) id√≥nea(s) para firmar el mismo
-stroke.location.value=Ciudad de Panam√°, Panam√°
+stroke.reason.value=He revisado este documento y acepto las condiciones firmando el mismo
+stroke.location.value=Ciudad de Panam·, Panam·
 forceload.stroke.provider.implementation=true
 stroke.provider.wacom.license=AgAkAMlv5nGdAQVXYWNvbQ1TaWduYXR1cmUgU0RLAgOBAgJkAACIAwEDZQA
 stroke.delete.data.onexit=true
