--- a/com.consultec.esigns.core/pom.xml
+++ b/com.consultec.esigns.core/pom.xml
@@ -78,6 +78,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
       <version>${bouncy.version}</version>
